--- a/docs/documentcatalog/e_notebook/c_other/02.git与GitHub.md
+++ b/docs/documentcatalog/e_notebook/c_other/02.git与GitHub.md
@@ -2,41 +2,14 @@
 title: git与GitHub
 ---
 
-## 1. 查看目前电脑的ssh key
+## 1. Mac系统查看目前电脑的ssh key
 
-* 方法一
-
-1. 打开你的 git bash 窗口
-
-2. 进入 .ssh 目录：
-
-```sh
-cd ~/.ssh
-```
-
-3. 找到 id_rsa.pub 文件：ls
-
-4. 查看公钥：
-```sh
-cat id_rsa.pub 
-```
-或者
-```sh
-vim id_rsa.pub
-```
-
-
-* 方法二
-
-或者你也可以直接输入命令
+打开终端，直接输入命令
 ```sh
 cat ~/.ssh/id_rsa.pub
 ```
 
-* 方法三
-
-或者你也可以直接打开你用户（一般都是 Administrator）下的 .ssh 文件夹
-打开它里面的 id_rsa.pub 文件
+## 2. Windows系统查看目前电脑的ssh key
 
 ## 2. 何谓公钥
 1.很多服务器都是需要认证的，ssh认证是其中的一种。在客户端生成公钥，把生成的公钥添加到服务器，你以后连接服务器就不用每次都输入用户名和密码了。
@@ -110,4 +83,52 @@ git commit -m "message"
 
 ```sh
 git push origin master
+```
+
+## 4. Mac系统将本地项目上传到github仓库
+* 前置条件
+1. 
+2. 
+## 5. Mac系统新建github仓库git分支，并推送项目
+
+* 查看本地分支
+
+```sh
+
+```
+
+* 查看远程分支
+
+```sh
+
+```
+
+* 查看所有分支
+
+```sh
+
+```
+
+* 新增本地分支 `master`
+
+```sh
+
+```
+
+* 将新建的本地分支 `master` 推送到远程分支
+
+```sh
+
+```
+
+* 将项目推送到新建的分支 `master`
+
+```sh
+
+```
+
+* 删除本地分支 `master`
+
+```sh
+
 ```
